// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@roots/bud-sass adds sass item 1`] = `
Object {
  "loader": StringContaining "sass-loader/dist/cjs.js",
  "options": Object {
    "implementation": Object {
      "FALSE": Any<Object>,
      "NULL": Any<Object>,
      "TRUE": Any<Object>,
      "cli_pkg_main_0_": Any<Function>,
      "info": StringContaining "dart-sass",
      "render": Any<Function>,
      "renderSync": Any<Function>,
      "types": Any<Object>,
    },
    "sourceMap": true,
  },
}
`;

exports[`@roots/bud-sass discovery.resolveFrom matches snap 1`] = `
Array [
  StringContaining "@roots/bud-sass",
]
`;

exports[`@roots/bud-sass has expected sass rule 1`] = `
Object {
  "exclude": Object {},
  "test": Object {},
  "use": Array [
    Object {
      "loader": StringContaining "mini-css-extract-plugin/dist/loader.js",
      "options": Object {},
    },
    Object {
      "loader": StringContaining "css-loader/dist/cjs.js",
      "options": Object {
        "importLoaders": 1,
        "sourceMap": false,
      },
    },
    Object {
      "loader": StringContaining "sass-loader/dist/cjs.js",
      "options": Object {
        "implementation": Object {
          "FALSE": Any<Object>,
          "NULL": Any<Object>,
          "TRUE": Any<Object>,
          "cli_pkg_main_0_": Any<Function>,
          "info": StringContaining "dart-sass",
          "render": Any<Function>,
          "renderSync": Any<Function>,
          "types": Any<Object>,
        },
        "sourceMap": true,
      },
    },
  ],
}
`;
